# bgp.zig

./: .gitignore  build.zig  build.zig.zon  todo.md
.github/workflows/: buid.yml  standard.yml
bird/: Dockerfile
bird/bird_conf/: bird.conf
example_exes/: test_debounce.zig  test_scheduled_task.zig  test_timer.zig
integ_tester/: .env  README.md  main.py  pyproject.toml
integ_tester/bgpz/: .gitignore  Dockerfile
integ_tester/bird/: Dockerfile
integ_tester/src/cluster_manager/: __init__.py  local_net.py
integ_tester/src/cluster_manager/configuration/: models.py  nodes.py
integ_tester/src/cluster_manager/configuration/concrete/: my_config.py
integ_tester/src/cluster_manager/drivers/: base.py  running_network_spec.py
integ_tester/src/cluster_manager/drivers/docker/: driver.py  local_docker_helper.py  local_network_spec.py  network_builder.py
src/: accepter.zig  main.zig  peer_map.zig
src/config/: json.zig  parsing.zig
src/messaging/: consts.zig  model.zig
src/messaging/encoding/: encoder.zig  header.zig  notification.zig  open.zig  update.zig
src/parsing/: header.zig  open.zig
src/rib/: adjRibManager.zig  adj_rib.zig  adj_rib_manager.zig  common.zig  mainRibManager.zig  main_rib.zig  main_rib_manager.zig  manager.zig  model.zig  rib_thread.zig  table.zig  utils.zig
src/sessions/: connections.zig  fsm.zig  session.zig
src/utils/: barrier.zig  debounced.zig  scheduled_task.zig  timer.zig
test_configs/: peer1.json  peer2.json
test_configs/bgpz/: bgpz-dummy.json  bgpz.json  bgpz1.json
test_configs/bird/: bird1.cfg  bird2.cfg  peer2.cfg
(+13 files in other folders)
